Ajustes na validação de usuario.
